--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -256,6 +256,51 @@
         "focus": false,
         "panel": "shared"
       }
+    },
+    {
+      "label": "Air: Start Live Reload",
+      "type": "shell",
+      "command": "air",
+      "args": ["-c", ".air.toml"],
+      "group": "build",
+      "isBackground": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "dedicated",
+        "clear": true
+      },
+      "problemMatcher": {
+        "owner": "air",
+        "pattern": {
+          "regexp": "^(.+):(\\d+):(\\d+): (.+)$",
+          "file": 1,
+          "line": 2,
+          "column": 3,
+          "message": 4
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "^\\s*building\\.\\.\\.$",
+          "endsPattern": "^\\s*(✓ Build|running|Build failed).*$"
+        }
+      }
+    },
+    {
+      "label": "Air: Debug Mode",
+      "type": "shell",
+      "command": "air",
+      "args": ["-d"],
+      "group": "build",
+      "isBackground": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": true,
+        "panel": "dedicated",
+        "clear": true
+      }
     }
   ]
 }
